Fixed Visuals and Added Text

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class ="row">
                 <div class="col-sm-6 p-0 d-flex align-items-center"> 
                     <!-- img-fluid = won't expand image larger than the container and will scale down if necessary -->
-                        <img class="img-fluid" src="images/IMG_0466.jpg" alt="Water Droplet on Leaf"> <!-- w-50 - 50% -->
+                        <img class="img-fluid" src="images/IMG_0466 (1).jpg" alt="Water Droplet on Leaf"> <!-- w-50 - 50% -->
                 </div>
                 <div class="col-sm-6 p-0 d-flex align-items-center"> 
                         <div class="container">
@@ -72,27 +72,22 @@
             <div class="row">
                 <div class="col-sm-4 p-3">
                     <!-- pt - 3 = padding top -->
-                    <img class="img-fluid" src="images/IMG_0456.JPG" alt="Echeveria Lola Plant">
+                    <img class="img-fluid" src="images/IMG_0456 (1).jpg" alt="Echeveria Lola Plant">
                 </div>
                 <div class="col-sm-8 p-3">
                     <h1 class="ovPadLeft">Background</h1> <!-- ovPadLeft - custom padding left side-->
-                    <p class="lead overview-font ovPadLeft">Leaf hydrophobicity is a trait that varies between plant species, 
-                                                            and it can influence various processes of the hydrological cycle and 
-                                                            pathogen growth on the leaf. Commercial use of nitrogen fertilizers 
-                                                            causes nitrogen pollution, and this study aimed to investigate the 
-                                                            effects of nitrogen pollution on the hydrophobicity of Echeveria Lola 
-                                                            leaves, a succulent. This study was conducted by growing the plants in 
-                                                            controlled environments with varying levels of nitrogen pollution and 
-                                                            measuring the water contact angle of the leaves through magnified images 
-                                                            and the program ImageJ. The hypothesis that nitrogen pollution affects the 
-                                                            hydrophobicity of leaves of Echeveria Lola because it influences the trichome
-                                                            quantity and density of a leaf was supported by the data. The adaxial side 
-                                                            of the leaf showed a statistically significant increase in the contact angle
-                                                            after being subjected to different levels of nitrogen. 
-                                                            Increasing understanding of the effects of nitrogen on leaf hydrophobicity 
-                                                            increases the understanding of how environments can be affected by nitrogen pollution. 
-                                                            Leaf wettability has been used in evaluating vegetation hydrological function 
-                                                            along with other plant traits. </p>
+                    <p class="lead overview-font ovPadLeft">This study aimed to investigate the effects of nitrogen pollution on the 
+                                                            hydrophobicity of Echeveria Lola leaves. The hypothesis is that nitrogen 
+                                                            pollution affects the hydrophobicity of the leaves because 
+                                                            it influences the trichome quantity and density of the leaf. 
+                                                            Leaf hydrophobicity is a trait that can influence various processes 
+                                                            of the hydrological cycle and pathogen growth on the leaf. 
+                                                            This study was conducted by growing plants in controlled environments 
+                                                            with varying levels of nitrogen pollution and measuring the 
+                                                            water contact angles of the leaves through magnified images
+                                                            and the program ImageJ.  Increasing understanding of the effects 
+                                                            of nitrogen on leaf hydrophobicity increases the understanding of
+                                                            how environments can be affected by nitrogen pollution. </p>
                 </div>
             </div>
             <div class="row">
@@ -101,19 +96,15 @@
                     <p class="lead overview-font ovPadRight">Leaf wettability can be used as a bio-indicator of a habitat’s quality.  
                                                              A high hydrophobicity and low hydrophobicity can have beneficial and harmful benefits on the plant, 
                                                              depending on its environment. 
-                                                             High leaf water repellency can help plants survive through prolonged rainfalls.
-                                                             It also has a significant role in transpiration and water interception processes. 
                                                              Knowing the hydrophobicity of a plant can help you determine the 
                                                              appropriate plant for vegetative restoration in certain environments. 
-                                                             There are many more effects of hydrophobicity related to a plant’s growth in a certain environment, 
-                                                             so it is extremely helpful to understand more about the factors that affect it. 
                                                              Understanding the effects of nitrogen pollution on the hydrophobicity of a 
                                                              plant allows us to understand how beneficial or harmful nitrogen may be to an ecosystem. 
                     </p>
                 </div>
                 <div class="col-sm-4 p-3">
                     <!-- pt - 3 = padding top -->
-                    <img class="img-fluid" src="images/Screenshot 2023-09-26 221758.png" alt="Contact Angle Graph">
+                    <img class="img-fluid" src="images/Graph.png.png" alt="Contact Angle Graph">
                 </div>
             </div>
             <div class="row">
@@ -141,7 +132,7 @@
     <!-- Footer (requires Bootstrap icons CSS)-->
     <footer class="p-5 footer text-light text-center position-relative">
        <div class="container">
-            <p class="lead">Copyright &copy; SE 2023 Bootstrap Demo</p> 
+            <p class="lead">Copyright &copy; SE 2023 Class</p> 
             <a href="#" class="position-absolute bottom-0 end-0 p-5">
                 <i class="bi bi-arrow-up-circle h2 icon-white"></i>
             </a>
