--- a/authors.html
+++ b/authors.html
@@ -86,7 +86,7 @@
     <!-- Footer (requires Bootstrap icons CSS)-->
     <footer class="p-5 footer text-light text-center position-relative">
        <div class="container">
-            <p class="lead">Copyright &copy; SE 2023 Bootstrap Demo</p> 
+            <p class="lead">Copyright &copy; SE 2023 Bootstrap Class</p> 
             <a href="#" class="position-absolute bottom-0 end-0 p-5">
                 <i class="bi bi-arrow-up-circle h2 icon-white"></i>
             </a>
