--- a/procedure.html
+++ b/procedure.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark nb-background-color">
     <!-- lg = large breakpoint, navbar-light = make text dark, header-->
         <div class="container">
-            <a href="/index.html" class="navbar-brand">
+            <a href="index.html" class="navbar-brand">
                 <img src="images/clipart-leaf-icon-2.png" alt="Water Logo" class="d-inline-block align-text-top w-25">
             </a>
 
